--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@
  .borders {
    border: 2px;
    background: rgb(61,135,54);
- background: linear-gradient(90deg, rgba(61,135,54,1) 57%, rgba(219,255,0,1) 100%);
+ background: linear-gradient(90deg, rgba(61,135,54,1) 57%, rgba(61,135,54,1) 100%);
    border-radius: 8px;
    padding:5px;
  }
@@ -217,7 +217,7 @@
  border: 2px;
  padding:5px;
  background: rgb(61,135,54);
- background: linear-gradient(90deg, rgba(61,135,54,1) 57%, rgba(219,255,0,1) 100%);
+ background: linear-gradient(90deg, rgba(61,135,54,1) 57%, rgba(61,135,54,1) 100%);
  }
  /* Add a black background color to the top navigation */
  .topnav {
@@ -314,3 +314,69 @@
  .card:hover {
   box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
  }
+ @media all and (max-width:30em){
+.button-68{
+display:block;
+margin:0.4em auto;
+}
+ }
+ /* Smartphones (horizontal y vertical) */
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+/* estilos */
+}
+
+/* Smartphones (horizontal) */
+@media only screen 
+and (min-width : 321px) {
+/* estilos */
+}
+
+/* Smartphones (vertical)  */
+@media only screen 
+and (max-width : 320px) {
+/* estilos */
+}
+
+/* iPads (vertical y horizontal) */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) {
+/* estilos */
+}
+
+/* iPads (horizontal) */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) {
+/* estilos */
+}
+
+/* iPads (vertical)  */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait) {
+/* estilos */
+}
+
+/* pc de escritorio y portátiles */
+@media only screen 
+and (min-width : 1224px) {
+/* estilos */
+}
+
+/* Pantallas grandes  */
+@media only screen 
+and (min-width : 1824px) {
+/* estilos */
+}
+
+/* iPhone 4 ----------- */
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5) {
+/* estilos */
+}
