--- a/style.css
+++ b/style.css
@@ -317,6 +317,21 @@
  .card:hover {
   box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
  }
+ .img1 {
+  background-image: url(img/virtual.png);
+  padding: 5px 10px 5px 10px;
+  margin: 2px;
+  float: left;
+  width: 200px;
+  text-align: center;
+ }
+ .fullwidth-container {
+
+  padding: 40px;
+  box-sizing: boder-box;
+  background-color: rgba(0, 255, 117, 0.30);
+  max-width: 100vmax !important;
+}
  @media all and (max-width:30em){
  }
  /* Smartphones (horizontal y vertical) */
