--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 .loader {
   --height-of-loader: 4px;
-  --loader-color: #0071e2;
+  --loader-color: #069e1a;
   width: 60%;
   height: var(--height-of-loader);
   border-radius: 30px;
@@ -43,58 +43,62 @@
          margin: 4px 2px;
          cursor: pointer;
      }
- 
- .button-68 {
-   appearance: none;
-   backface-visibility: hidden;
-   background-color: #27ae60;
-   border-radius: 8px;
-   border-style: none;
-   box-shadow: rgba(39, 174, 96, .15) 0 4px 9px;
-   box-sizing: border-box;
-   color: #fff;
-   cursor: pointer;
-   display: inline-block;
-   font-family: Inter,-apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif;
-   font-size: 16px;
-   font-weight: 600;
-   letter-spacing: normal;
-   line-height: 1.5;
-   outline: none;
-   overflow: hidden;
-   padding: 13px 20px;
-   position: relative;
-   text-align: center;
-   text-decoration: none;
-   transform: translate3d(0, 0, 0);
-   transition: all .3s;
-   user-select: none;
-   -webkit-user-select: none;
-   touch-action: manipulation;
-   vertical-align: top;
-   white-space: nowrap;
- }
- 
- .button-68:hover {
-   background-color: #1e8449;
-   opacity: 1;
-   transform: translateY(0);
-   transition-duration: .35s;
- }
- 
- .button-68:active {
-   transform: translateY(2px);
-   transition-duration: .35s;
- }
- 
- .button-68:hover {
-   box-shadow: rgba(39, 174, 96, .2) 0 6px 12px;
- }
  img {
    border-radius: 8px;
-   max-width:400px;
-   
+   height: auto;
+   display: block;
+   margin: 0 auto;
+   max-width: 100%;
+   width: 80%;
  }
+
+/* CSS */
+.button-68 {
+  appearance: none;
+  backface-visibility: hidden;
+  background-color: #27ae60;
+  border-radius: 8px;
+  border-style: none;
+  box-shadow: rgba(39, 174, 96, .15) 0 4px 9px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Inter,-apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: normal;
+  line-height: 1.5;
+  outline: none;
+  overflow: hidden;
+  padding: 13px 20px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transform: translate3d(0, 0, 0);
+  transition: all .3s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: top;
+  white-space: nowrap;
+}
+
+.button-68:hover {
+  background-color: #1e8449;
+  opacity: 1;
+  transform: translateY(0);
+  transition-duration: .35s;
+}
+
+.button-68:active {
+  transform: translateY(2px);
+  transition-duration: .35s;
+}
+
+.button-68:hover {
+  box-shadow: rgba(39, 174, 96, .2) 0 6px 12px;
+}
      .button {
    background-color: #448944; /* Green */
    border: none;
@@ -310,20 +314,9 @@
   transform: scale(0.98);
   border-radius: 20px;
  }
- .button-68{
-  display:block;
-  margin:0.4em auto;
-  }
+
  .card:hover {
   box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
- }
- .img1 {
-  background-image: url(img/virtual.png);
-  padding: 5px 10px 5px 10px;
-  margin: 2px;
-  float: left;
-  width: 200px;
-  text-align: center;
  }
  .fullwidth-container {
 
@@ -338,6 +331,7 @@
 @media only screen 
 and (min-device-width : 320px) 
 and (max-device-width : 480px) {
+  
 /* estilos */
 }
 
